Updated app body min height to avoid gaps on larger screens

--- a/src/scss/components/_app-body.scss
+++ b/src/scss/components/_app-body.scss
@@ -1,7 +1,7 @@
 @use "../base/structural";
 
 #app-body {
-    min-height: 900px; // For testing scroll behaviour 
+    min-height: 100vh;
 }
 
 @media (min-width: 768px) {
